 - [ZBX-3074] moved the 'Status' column in the item list to the left (pavels)
 - [ZBX-1357] updated Brazilian Portuguese and Russian translations; thanks to Zabbix translators (Richlv)
 - [ZBX-2960] added example userparameter for partition discovery on Linux (Richlv)

Bug fixes:
 - [ZBX-4056] fixed dependencies not added when template linked to host (Vedmak)
 - [ZBX-4315] fixed the 'close' link in the tooltips (pavels)
 - [ZBX-3675] fixed items created via api for template have wrong interfaceid on linked host (Vedmak)
 - [ZBX-4212] fixed creation of trigger expression with "])" in item key (Vedmak)
 - [ZBXNEXT-675] reduced surrounding whitespace for Switch, Cloud, Crypto-router, UPS, Hub and Router map icons (Elvis, Richlv)
 - [ZBX-4305] removed CREDITS file (Richlv)
 - [ZBX-2504] replaced 'Groups' by 'Replace groups' in host mass-update form to avoid confusion (Alexei)
 - [ZBX-2960] added defaults for example userparameters vfs.dir.size (/tmp) and proc.cpu (zabbix_agentd) to avoid errors in 'zabbix_agentd -p', documented them (Richlv)
 - [ZBX-2960] clarified what happens if proc.cpu does not match any processes (Richlv)
 - [ZBX-2960] made mysql.ping example userparameter a but more efficient by avoiding extra 'wc' invocation (Richlv)
 - [ZBX-3710] renamed "Zabbix Java Proxy" to "Zabbix Java Gateway" (asaveljevs)
 - [ZBX-4179] fixed compilation on OpenBSD: `NS_DEFAULTPORT' undeclared (asaveljevs)
 - [ZBX-3885] fixed error when update trigger prototype with wrong data (Vedmak)
 - [ZBX-3857] fixed creation and sorting of trigger prototypes (Vedmak)
 - [ZBX-4245] fixed error when add operation condition in action (Vedmak)
 - [ZBX-4265] fixed iconmappig API permission check (pavels)
 - [ZBX-4283] fixed template creation being reported as an update (Richlv)
 - [ZBX-3749] escaped HTML entities in the web step "required" field (pavels)

--------------------------------------------------------------------------------
Changes for 1.9.7

New features: