@@ -30,7 +30,6 @@ if( !isset($DB)) {
 	if(isset($DB_PASSWORD))	$DB['PASSWORD'] = $DB_PASSWORD;
 }
 
-
 /**
  * Creates global database connection
  *
@@ -57,8 +56,6 @@ if( !isset($DB)) {
 //Stats
 		$DB['SELECT_COUNT'] = 0;
 		$DB['EXECUTE_COUNT'] = 0;
-
-//SDI('type: '.$DB['TYPE'].'; server: '.$DB['SERVER'].'; port: '.$DB['PORT'].'; db: '.$DB['DATABASE'].'; usr: '.$DB['USER'].'; pass: '.$DB['PASSWORD']);
 
 		if (!isset($DB['TYPE'])) {
 			$error = "Unknown database type.";
@@ -119,7 +116,6 @@ if( !isset($DB)) {
 					}
 
 					$DB['DB']= ociplogon($DB['USER'], $DB['PASSWORD'], $connect);
-//					$DB['DB']= ociplogon($DB['USER'], $DB['PASSWORD'], '(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST='.$DB['SERVER'].')(PORT=1521))(CONNECT_DATA=(SERVICE_NAME='.$DB['DATABASE'].')))');
 					if (!$DB['DB']) {
 						$error = 'Error connecting to database';
 						$result = false;
@@ -152,6 +148,8 @@ if( !isset($DB)) {
 				break;
 				case ZBX_DB_SQLITE3:
 					if (file_exists($DB['DATABASE'])) {
+						init_sqlite3_access();
+						lock_sqlite3_access();
 						try{
 							$DB['DB'] = new SQLite3($DB['DATABASE'], SQLITE3_OPEN_READWRITE);
 						}
@@ -159,14 +157,11 @@ if( !isset($DB)) {
 							$error = 'Error connecting to database';
 							$result = false;
 						}
+						unlock_sqlite3_access();
 					}
 					else {
 						$error = 'Missing database';
 						$result = false;
-					}
-
-					if ($result) {
-						$result = init_sqlite3_access();
 					}
 				break;
 				default:
@@ -199,7 +194,9 @@ if( !isset($DB)) {
 					$result = db2_close($DB['DB']);
 					break;
 				case ZBX_DB_SQLITE3:
+					lock_sqlite3_access();
 					$DB['DB']->close();
+					unlock_sqlite3_access();
 					$result = true;
 					break;
 			}
@@ -234,22 +231,23 @@ if( !isset($DB)) {
 		return true;
 	}
 
-	function DBstart($strict=true) {
+	function DBstart() {
 		global $DB;
-//SDI('DBStart(): '.$DB['TRANSACTIONS']);
-		$DB['STRICT'] = $strict;
-
-		$DB['TRANSACTIONS']++;
-
-		if ($DB['TRANSACTIONS'] > 1) {
-			info('POSSIBLE ERROR: Used incorrect logic in database processing, started subtransaction!');
-			return false;
-		}
-
-		$DB['TRANSACTION_NO_FAILED_SQLS'] = true;
 
 		$result = false;
-		if (isset($DB['DB']) && !empty($DB['DB']))
+
+		if ($DB['TRANSACTIONS'] != 0) {
+			info('POSSIBLE ERROR: Used incorrect logic in database processing, started subtransaction!');
+			return $result;
+		}
+
+		$DB['TRANSACTIONS']++;
+		$DB['TRANSACTION_NO_FAILED_SQLS'] = true;
+
+		if (!isset($DB['DB']) || empty($DB['DB'])) {
+			return $result;
+		}
+
 		switch ($DB['TYPE']) {
 			case ZBX_DB_MYSQL:
 				$result = DBexecute('begin');
@@ -259,18 +257,16 @@ if( !isset($DB)) {
 				break;
 			case ZBX_DB_ORACLE:
 				$result = true;
-// TODO			OCI_DEFAULT
 				break;
 			case ZBX_DB_DB2:
 				$result = db2_autocommit($DB['DB'], DB2_AUTOCOMMIT_OFF);
 				break;
 			case ZBX_DB_SQLITE3:
-				if (lock_sqlite3_access()) {
-					$result = DBexecute('begin');
-				}
+				lock_sqlite3_access();
+				$result = DBexecute('begin');
 				break;
 		}
-	return $result;
+		return $result;
 	}
 
 
@@ -280,46 +276,41 @@ if( !isset($DB)) {
  * @param string $doCommit True - do commit, rollback otherwise. Rollback is also always performed if a sql failed within this transaction.
  * @return bool True - successful commit, False - otherwise
  */
-	function DBend($doCommit=true) {
+	function DBend($doCommit = true) {
 		global $DB;
 
-		if ($DB['TRANSACTIONS'] != 1) {
-			$DB['TRANSACTIONS']--;
+		$result = false;
 
-			if ($DB['TRANSACTIONS'] < 1) {
-				$DB['TRANSACTIONS'] = 0;
-				$DB['TRANSACTION_NO_FAILED_SQLS'] = false;
-				info('POSSIBLE ERROR: Used incorrect logic in database processing, transaction not started!');
-			}
+		if (!isset($DB['DB']) || empty($DB['DB'])) {
+			return $result;
+		}
 
-			$DB['TRANSACTION_NO_FAILED_SQLS'] = $doCommit && $DB['TRANSACTION_NO_FAILED_SQLS'];
+		if ($DB['TRANSACTIONS'] == 0) {
+			info('POSSIBLE ERROR: Used incorrect logic in database processing, transaction not started!');
+			return $result;
+		}
 
-			$result =  $DB['TRANSACTION_NO_FAILED_SQLS'];
+		$DBresult = $doCommit && $DB['TRANSACTION_NO_FAILED_SQLS'];
+
+		if ($DBresult) {
+			$DBresult = DBcommit();
 		}
 		else {
-			$DBresult = $doCommit && $DB['TRANSACTION_NO_FAILED_SQLS'];
-
-			$DB['TRANSACTIONS'] = 0;
-
-			if ($DBresult) { // OK
-				$DBresult = DBcommit();
-			}
-
-			if (!$DBresult) { // FAIL
-				DBrollback();
-			}
-
-			$result = (!is_null($doCommit) && $DBresult) ? $doCommit : $DBresult;
+			DBrollback();
 		}
 
-	return $result;
+		$DB['TRANSACTIONS'] = 0;
+
+		$result = (!is_null($doCommit) && $DBresult) ? $doCommit : $DBresult;
+
+		return $result;
 	}
 
 	function DBcommit() {
 		global $DB;
 
 		$result = false;
-		if (isset($DB['DB']) && !empty($DB['DB']))
+
 		switch ($DB['TYPE']) {
 			case ZBX_DB_MYSQL:
 				$result = DBexecute('commit');
@@ -332,23 +323,23 @@ if( !isset($DB)) {
 				break;
 			case ZBX_DB_DB2:
 				$result = db2_commit($DB['DB']);
-				if ($result) db2_autocommit($DB['DB'], DB2_AUTOCOMMIT_ON);
-				break;
-			case ZBX_DB_SQLITE3:
-				if (unlock_sqlite3_access()) {
-					$result = DBexecute('commit');
+				if ($result) {
+					db2_autocommit($DB['DB'], DB2_AUTOCOMMIT_ON);
 				}
 				break;
+			case ZBX_DB_SQLITE3:
+				$result = DBexecute('commit');
+				unlock_sqlite3_access();
+				break;
 		}
-
-	return $result;
+		return $result;
 	}
 
 	function DBrollback() {
 		global $DB;
 
 		$result = false;
-		if (isset($DB['DB']) && !empty($DB['DB']))
+
 		switch ($DB['TYPE']) {
 			case ZBX_DB_MYSQL:
 				$result = DBexecute('rollback');
@@ -364,13 +355,11 @@ if( !isset($DB)) {
 				db2_autocommit($DB['DB'], DB2_AUTOCOMMIT_ON);
 				break;
 			case ZBX_DB_SQLITE3:
-				if (unlock_sqlite3_access()) {
-					$result = DBexecute('rollback');
-				}
+				$result = DBexecute('rollback');
+				unlock_sqlite3_access();
 				break;
 		}
-
-	return $result;
+		return $result;
 	}
 
 /* NOTE:
@@ -399,188 +388,174 @@ if( !isset($DB)) {
  * @param integer $offset return starting from $offset record
  * @return resource or object, False if failed
  */
-	function &DBselect($query, $limit=null, $offset=0) {
+	function &DBselect($query, $limit = null, $offset = 0) {
 		global $DB;
+
 		$result = false;
 
-		if (
-			(isset($limit) && ($limit<0 || !zbx_ctype_digit($limit))) ||
-			$offset < 0 ||
-			!zbx_ctype_digit($offset))
-		{
-			$moreDetails=isset($limit) ? " Limit [$limit] Offset [$offset]" : " Offset [$offset]";
-			error("Incorrect parameters for limit and/or offset. Query [$query]".$moreDetails);
+		if (!isset($DB['DB']) || empty($DB['DB'])) {
 			return $result;
 		}
 
-		$time_start=microtime(true);
+		if ((isset($limit) && ($limit < 0 || !zbx_ctype_digit($limit))) || $offset < 0 || !zbx_ctype_digit($offset))
+		{
+			$moreDetails = isset($limit) ? ' Limit ['.$limit.'] Offset ['.$offset.']' : ' Offset ['.$offset.']';
+			error('Incorrect parameters for limit and/or offset. Query ['.$query.']'.$moreDetails);
+			return $result;
+		}
 
-		if (isset($DB['DB']) && !empty($DB['DB'])) {
-			$DB['SELECT_COUNT']++;
-//SDI('SQL['.$DB['SELECT_COUNT'].']: '.$query);
-			// Process limit and offset
+		$time_start = microtime(true);
+		$DB['SELECT_COUNT']++;
+
+		// Process limit and offset
+		if (isset($limit)) {
 			switch ($DB['TYPE']) {
 				case ZBX_DB_MYSQL:
 				case ZBX_DB_POSTGRESQL:
 				case ZBX_DB_SQLITE3:
-					if (isset($limit)) {
-						$query .= ' LIMIT '.intval($limit).' OFFSET '.intval($offset);
-					}
-				break;
-				case ZBX_DB_ORACLE:
-				case ZBX_DB_DB2:
-					if (isset($limit)) {
-						$till = $offset + $limit;
-						$query = 'SELECT * FROM ('.$query.') WHERE rownum BETWEEN '.intval($offset).' AND '.intval($till);
-					}
-				break;
-			}
-
-			switch ($DB['TYPE']) {
-				case ZBX_DB_MYSQL:
-					$result = mysql_query($query, $DB['DB']);
-					if (!$result) {
-						error('Error in query ['.$query.'] ['.mysql_error().']');
-					}
-					break;
-				case ZBX_DB_POSTGRESQL:
-					$result = pg_query($DB['DB'], $query);
-					if (!$result) {
-						error('Error in query ['.$query.'] ['.pg_last_error().']');
-					}
+					$query .= ' LIMIT '.intval($limit).' OFFSET '.intval($offset);
 					break;
 				case ZBX_DB_ORACLE:
-					$result=OCIParse($DB['DB'], $query);
-					if (!$result) {
-						$e=@ocierror();
-						error('SQL error ['.$e['message'].'] in ['.$e['sqltext'].']');
-					}
-					elseif (!@OCIExecute($result,($DB['TRANSACTIONS'] ? OCI_DEFAULT : OCI_COMMIT_ON_SUCCESS))) {
-						$e=ocierror($result);
-						error('SQL error ['.$e['message'].'] in ['.$e['sqltext'].']');
-					}
-				break;
 				case ZBX_DB_DB2:
-					$options = array();
-					if ($DB['TRANSACTIONS']) $options['autocommit'] = DB2_AUTOCOMMIT_OFF;
-
-					if (!$result = db2_prepare($DB['DB'], $query)) {
-						$e = @db2_stmt_errormsg($result);
-						error('SQL error ['.$query.'] in ['.$e.']');
-					}
-					elseif (true !== @db2_execute($result, $options)) {
-						$e = @db2_stmt_errormsg($result);
-						error('SQL error ['.$query.'] in ['.$e.']');
-						$result = false;
-					}
-				break;
-				case ZBX_DB_SQLITE3:
-					$lock=true;
-					if (0 == $DB['TRANSACTIONS']) {
-						$lock = lock_sqlite3_access();
-					}
-
-					if ($lock && (!$result = $DB['DB']->query($query))) {
-						error('Error in query ['.$query.'] Error code ['.$DB['DB']->lastErrorCode().'] Message ['.$DB['DB']->lastErrorMsg().']');
-					}
-
-					if ($lock && (0 == $DB['TRANSACTIONS'])) {
-						$lock = unlock_sqlite3_access();
-					}
-
-					if (!$lock) {
-						$result = false;
-					}
-				break;
-			}
-//SDI($result);
-
-			// $result is false only if an error occured
-			if ($DB['TRANSACTION_NO_FAILED_SQLS'] && !$result) {
-				$DB['TRANSACTION_NO_FAILED_SQLS'] = false;
+					$till = $offset + $limit;
+					$query = 'SELECT * FROM ('.$query.') WHERE rownum BETWEEN '.intval($offset).' AND '.intval($till);
+					break;
 			}
 		}
-COpt::savesqlrequest(microtime(true) - $time_start, $query);
 
-	return $result;
+		switch ($DB['TYPE']) {
+			case ZBX_DB_MYSQL:
+				if (!$result = mysql_query($query, $DB['DB'])) {
+					error('Error in query ['.$query.'] ['.mysql_error().']');
+				}
+				break;
+			case ZBX_DB_POSTGRESQL:
+				if (!$result = pg_query($DB['DB'], $query)) {
+					error('Error in query ['.$query.'] ['.pg_last_error().']');
+				}
+				break;
+			case ZBX_DB_ORACLE:
+				if (!$result=OCIParse($DB['DB'], $query)) {
+					$e = @ocierror();
+					error('SQL error ['.$e['message'].'] in ['.$e['sqltext'].']');
+				}
+				elseif (!@OCIExecute($result, ($DB['TRANSACTIONS'] ? OCI_DEFAULT : OCI_COMMIT_ON_SUCCESS))) {
+					$e = ocierror($result);
+					error('SQL error ['.$e['message'].'] in ['.$e['sqltext'].']');
+				}
+				break;
+			case ZBX_DB_DB2:
+				$options = array();
+				if ($DB['TRANSACTIONS']) {
+					$options['autocommit'] = DB2_AUTOCOMMIT_OFF;
+				}
+
+				if (!$result = db2_prepare($DB['DB'], $query)) {
+					$e = @db2_stmt_errormsg($result);
+					error('SQL error ['.$query.'] in ['.$e.']');
+				}
+				elseif (true !== @db2_execute($result, $options)) {
+					$e = @db2_stmt_errormsg($result);
+					error('SQL error ['.$query.'] in ['.$e.']');
+					$result = false;
+				}
+				break;
+			case ZBX_DB_SQLITE3:
+				if ($DB['TRANSACTIONS'] == 0) {
+					lock_sqlite3_access();
+				}
+
+				if (false === ($result = $DB['DB']->query($query))) {
+					error('Error in query ['.$query.'] Error code ['.$DB['DB']->lastErrorCode().'] Message ['.$DB['DB']->lastErrorMsg().']');
+				}
+
+				if ($DB['TRANSACTIONS'] == 0) {
+					unlock_sqlite3_access();
+				}
+				break;
+		}
+
+		// $result is false only if an error occured
+		if ($DB['TRANSACTION_NO_FAILED_SQLS'] && !$result) {
+			$DB['TRANSACTION_NO_FAILED_SQLS'] = false;
+		}
+
+		COpt::savesqlrequest(microtime(true) - $time_start, $query);
+		return $result;
 	}
 
 	function DBexecute($query, $skip_error_messages = 0) {
 		global $DB;
-		$result = false;
 
-		$time_start=microtime(true);
-		if (isset($DB['DB']) && !empty($DB['DB'])) {
-			$DB['EXECUTE_COUNT']++;
-//SDI('SQL xec: '.$query);
-
-			switch ($DB['TYPE']) {
-				case ZBX_DB_MYSQL:
-					$result = mysql_query($query, $DB['DB']);
-					if (!$result) {
-						error('Error in query ['.$query.'] ['.mysql_error().']');
-					}
-				break;
-				case ZBX_DB_POSTGRESQL:
-					$result = (bool) pg_query($DB['DB'], $query);
-					if (!$result) {
-						error('Error in query ['.$query.'] ['.pg_last_error().']');
-					}
-				break;
-				case ZBX_DB_ORACLE:
-					$result=OCIParse($DB['DB'], $query);
-					if (!$result) {
-						$e=@ocierror();
-						error('SQL error ['.$e['message'].'] in ['.$e['sqltext'].']');
-					}
-					elseif (!@OCIExecute($result, ($DB['TRANSACTIONS'] ? OCI_DEFAULT : OCI_COMMIT_ON_SUCCESS))) {
-						$e=ocierror($result);
-						error('SQL error ['.$e['message'].'] in ['.$e['sqltext'].']');
-					}
-					else {
-						/* It should be here. The function must return boolean */
-						$result = true;
-					}
-				break;
-				case ZBX_DB_DB2:
-					if (!$result = db2_prepare($DB['DB'], $query)) {
-						$e = @db2_stmt_errormsg($result);
-						error('SQL error ['.$query.'] in ['.$e.']');
-					}
-					elseif (true !== @db2_execute($result)) {
-						$e = @db2_stmt_errormsg($result);
-						error('SQL error ['.$query.'] in ['.$e.']');
-					}
-					else {
-						/* It should be here. The function must return boolean */
-						$result = true;
-					}
-				break;
-				case ZBX_DB_SQLITE3:
-					$lock = true;
-					if (0 == $DB['TRANSACTIONS']) {
-						$lock = lock_sqlite3_access();
-					}
-
-					if ($lock && (!$result = $DB['DB']->exec($query))) {
-						error('Error in query ['.$query.'] Error code ['.$DB['DB']->lastErrorCode().'] Message ['.$DB['DB']->lastErrorMsg().']');
-					}
-
-					if ($lock && (0 == $DB['TRANSACTIONS'])) {
-						$lock = unlock_sqlite3_access();
-					}
-
-					if (!$lock) {
-						$result = false;
-					}
-					break;
-			}
-			if ($DB['TRANSACTIONS'] && !$result) {
-				$DB['TRANSACTION_NO_FAILED_SQLS']  = false;
-			}
+		if (!isset($DB['DB']) || empty($DB['DB'])) {
+			return false;
 		}
-COpt::savesqlrequest(microtime(true) - $time_start, $query);
-	return (bool) $result;
+
+		$result = false;
+		$time_start = microtime(true);
+
+		$DB['EXECUTE_COUNT']++;
+
+		switch ($DB['TYPE']) {
+			case ZBX_DB_MYSQL:
+				if (!$result = mysql_query($query, $DB['DB'])) {
+					error('Error in query ['.$query.'] ['.mysql_error().']');
+				}
+				break;
+			case ZBX_DB_POSTGRESQL:
+				if (!$result = (bool) pg_query($DB['DB'], $query)) {
+					error('Error in query ['.$query.'] ['.pg_last_error().']');
+				}
+				break;
+			case ZBX_DB_ORACLE:
+				if (!$result = OCIParse($DB['DB'], $query)) {
+					$e = @ocierror();
+					error('SQL error ['.$e['message'].'] in ['.$e['sqltext'].']');
+				}
+				elseif (!@OCIExecute($result, ($DB['TRANSACTIONS'] ? OCI_DEFAULT : OCI_COMMIT_ON_SUCCESS))) {
+					$e = ocierror($result);
+					error('SQL error ['.$e['message'].'] in ['.$e['sqltext'].']');
+				}
+				else {
+					/* It should be here. The function must return boolean */
+					$result = true;
+				}
+				break;
+			case ZBX_DB_DB2:
+				if (!$result = db2_prepare($DB['DB'], $query)) {
+					$e = @db2_stmt_errormsg($result);
+					error('SQL error ['.$query.'] in ['.$e.']');
+				}
+				elseif (true !== @db2_execute($result)) {
+					$e = @db2_stmt_errormsg($result);
+					error('SQL error ['.$query.'] in ['.$e.']');
+				}
+				else {
+					/* It should be here. The function must return boolean */
+					$result = true;
+				}
+				break;
+			case ZBX_DB_SQLITE3:
+				if ($DB['TRANSACTIONS'] == 0) {
+					lock_sqlite3_access();
+				}
+
+				if (!$result = $DB['DB']->exec($query)) {
+					error('Error in query ['.$query.'] Error code ['.$DB['DB']->lastErrorCode().'] Message ['.$DB['DB']->lastErrorMsg().']');
+				}
+
+				if ($DB['TRANSACTIONS'] == 0) {
+					unlock_sqlite3_access();
+				}
+				break;
+		}
+
+		if ($DB['TRANSACTIONS'] != 0 && !$result) {
+			$DB['TRANSACTION_NO_FAILED_SQLS'] = false;
+		}
+
+		COpt::savesqlrequest(microtime(true) - $time_start, $query);
+		return (bool) $result;
 	}
 
 	function DBfetch(&$cursor) {
@@ -588,17 +563,18 @@ COpt::savesqlrequest(microtime(true) - $time_start, $query);
 
 		$result = false;
 
-		if (isset($DB['DB']) && !empty($DB['DB']))
+		if (!isset($DB['DB']) || empty($DB['DB'])) {
+			return $result;
+		}
+
 		switch ($DB['TYPE']) {
 			case ZBX_DB_MYSQL:
-				$result = mysql_fetch_assoc($cursor);
-				if (!$result) {
+				if (!$result = mysql_fetch_assoc($cursor)) {
 					mysql_free_result($cursor);
 				}
 				break;
 			case ZBX_DB_POSTGRESQL:
-				$result = pg_fetch_assoc($cursor);
-				if (!$result) {
+				if (!$result = pg_fetch_assoc($cursor)) {
 					pg_free_result($cursor);
 				}
 				break;
@@ -607,7 +583,7 @@ COpt::savesqlrequest(microtime(true) - $time_start, $query);
 					$result = array();
 					foreach ($row as $key => $value) {
 						$field_type = zbx_strtolower(oci_field_type($cursor, $key));
-						$value = (str_in_array($field_type,array('varchar', 'varchar2', 'blob', 'clob')) && is_null($value)) ? '' : $value;
+						$value = (str_in_array($field_type, array('varchar', 'varchar2', 'blob', 'clob')) && is_null($value)) ? '' : $value;
 
 						if (is_object($value) && (zbx_stristr($field_type, 'lob') !== false)) {
 							$value = $value->load();
@@ -618,15 +594,19 @@ COpt::savesqlrequest(microtime(true) - $time_start, $query);
 				}
 				break;
 			case ZBX_DB_DB2:
-				$result = db2_fetch_assoc($cursor);
-				if (!$result) {
+				if (!$result = db2_fetch_assoc($cursor)) {
 					db2_free_result($cursor);
 				}
 				break;
 			case ZBX_DB_SQLITE3:
-				$result = $cursor->fetchArray(SQLITE3_ASSOC);
-				if (!$result) {
+				if ($DB['TRANSACTIONS'] == 0) {
+					lock_sqlite3_access();
+				}
+				if (!$result = $cursor->fetchArray(SQLITE3_ASSOC)) {
 					unset($cursor);
+				}
+				if ($DB['TRANSACTIONS'] == 0) {
+					unlock_sqlite3_access();
 				}
 				break;
 		}
@@ -639,7 +619,7 @@ COpt::savesqlrequest(microtime(true) - $time_start, $query);
 			}
 		}
 
-	return $result;
+		return $result;
 	}
 
 // string value prepearing
@@ -699,14 +679,16 @@ elseif (isset($DB['TYPE']) && $DB['TYPE'] == ZBX_DB_DB2) {
 		return ' CAST('.$field.' AS BIGINT) ';
 	}
 }
-else {
+elseif (isset($DB['TYPE']) && $DB['TYPE'] == ZBX_DB_SQLITE3) {
 	function zbx_dbstr($var) {
+		global $DB;
+
 		if (is_array($var)) {
-			foreach ($var as $vnum => $value) $var[$vnum] = "'".addslashes($value)."'";
+			foreach ($var as $vnum => $value) $var[$vnum] = "'".$DB['DB']->escapeString($value)."'";
 			return $var;
 		}
 
-	return "'".addslashes($var)."'";
+		return "'".$DB['DB']->escapeString($var)."'";
 	}
 
 	function zbx_dbcast_2bigint($field) {
@@ -730,7 +712,7 @@ else {
 
 		switch ($DB['TYPE']) {
 			case ZBX_DB_SQLITE3:
-				return ' ('.$x.' %% '.$y.')';
+				return ' (('.$x.') % ('.$y.'))';
 			default:
 				return ' MOD('.$x.','.$y.')';
 		}
@@ -1054,13 +1036,10 @@ else {
  *
  * @return bool
  */
-if (isset($DB['TYPE']) && ZBX_DB_SQLITE3 == $DB['TYPE']) {
-	function init_sqlite3_access() {
-		global $DB, $ZBX_SEM_ID;
+function init_sqlite3_access() {
+	global $DB;
 
-		$ZBX_SEM_ID = sem_get(ftok($DB['DATABASE'], 'z'), 1, 0660);
-		return $ZBX_SEM_ID;
-	}
+	$DB['SEM_ID'] = sem_get(ftok($DB['DATABASE'], 'z'), 1, 0660);
 }
 
 /**
@@ -1068,12 +1047,10 @@ if (isset($DB['TYPE']) && ZBX_DB_SQLITE3 == $DB['TYPE']) {
  *
  * @return bool
  */
-if (isset($DB['TYPE']) && ZBX_DB_SQLITE3 == $DB['TYPE']) {
-	function lock_sqlite3_access() {
-		global $ZBX_SEM_ID, $DB;
+function lock_sqlite3_access() {
+	global $DB;
 
-		return sem_acquire($ZBX_SEM_ID);
-	}
+	sem_acquire($DB['SEM_ID']);
 }
 
 /**
@@ -1081,12 +1058,10 @@ if (isset($DB['TYPE']) && ZBX_DB_SQLITE3 == $DB['TYPE']) {
  *
  * @return bool
  */
-if (isset($DB['TYPE']) && ZBX_DB_SQLITE3 == $DB['TYPE']) {
-	function unlock_sqlite3_access() {
-		global $ZBX_SEM_ID;
+function unlock_sqlite3_access() {
+	global $DB;
 
-		return sem_release($ZBX_SEM_ID);
-	}
+	sem_release($DB['SEM_ID']);
 }
 
 	class DB {
